# MLOps-API

./: Dockerfile  Makefile  README.MD  pyproject.toml  setup.cfg
.github/workflows/: cicd.yml
app/: __init__.py  run.py
app/api/: __init__.py  prediction.py
app/config/: __init__.py  model.py
app/model/: Sentiment_model_complete.pth  models.txt  vectorizer.pkl
app/schema/: __init__.py  review_analysis.py
app/services/: model_inference.py
